Alignment fixed

--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@ h6 {
 }
 
 .mac-img {
-  height: 400px;
-  width: 400px;
+  height: 300px;
+  width: 300px;
 }
 
 #bold-line {
